<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
    
     <Button 
        android:id="@+id/btnAnadirPruebas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
		android:text="@string/btnAnadirPruebas"
        />
    
     <Button
        android:id="@+id/btnEditarPruebas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
      	android:text="@string/btnEditarPruebas"
        />
    
     
    <Button 
        android:id="@+id/btnEliminarPruebas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
      	android:text="@string/btnEliminarPruebas"
        />
    
     <Button 
        android:id="@+id/btnVerPruebas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
      	android:text="@string/btnVerPruebas"
        />
    

</LinearLayout>
