<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">>

<!--     <LinearLayout  -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="match_parent" -->
<!--         android:gravity="center" -->
<!--     	android:orientation="vertical"> -->
    
    <Button
        android:id="@+id/btnJugadores"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_administrar_jugadores"/>
    
    
     <Button
        android:id="@+id/btnPruebas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_administrar_pruebas"/>
     
     <Button
        android:id="@+id/btnAdministrarEntrenos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_administrar_entrenos"/>
          
     <Button
        android:id="@+id/btnPizarra"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnPizarra"/>
     
      <Button
        android:id="@+id/btnGraficos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_graficos"/>
    
</LinearLayout>

<!-- </ScrollView> -->
