<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
            <TextView 
            android:id="@+id/lblDatos2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introducePrueba"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
    
     <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	

    	
        <TextView 
            android:id="@+id/lblPrueba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPrueba"
            />
    	
        <EditText 
            android:id="@+id/txtPrueba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
     
        </LinearLayout>
        
     <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	   
         <TextView 
            android:id="@+id/lblCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCategoria"
            />
    	
        <EditText 
            android:id="@+id/txtCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
        	/>
              
    </LinearLayout>    
    
        <Button 
        android:id="@+id/btnGuardarPruebas"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:text="@string/btnGuardar"/>
    
    
    

</LinearLayout>
