<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout 
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content">
      
    		
                   <TextView 
            android:id="@+id/lblDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduceJugador"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:visibility="gone"
            /> 
            
        

        
        <TextView 
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNombre"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/lblDatos"
            android:textStyle="bold"
            />
    	
        <EditText 
            android:id="@+id/txtNombre"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/lblDatos"
        	android:layout_toRightOf="@id/lblNombre">
            
        </EditText>
        

    	   
         <TextView 
            android:id="@+id/lblApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblApellido"
            android:layout_below="@id/txtNombre"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>
    	
        <EditText 
            android:id="@+id/txtApellido"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNombre"
            android:layout_alignLeft="@id/txtNombre"/>
        	   
         <TextView 
            android:id="@+id/lblEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEdad"
            android:layout_below="@id/lblApellido"
			android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>
    	
        <EditText 
            android:id="@+id/txtEdad"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@id/txtApellido"
            android:layout_alignLeft="@id/txtApellido"/>

    	   
         <TextView 
            android:id="@+id/lblTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTelefono"
            android:layout_below="@id/lblEdad"
			android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>
    	
        <EditText 
            android:id="@+id/txtTelefono"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@id/txtEdad"
            android:layout_alignLeft="@id/txtEdad"/>
    	   
         <TextView 
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail"
            android:layout_below="@id/lblTelefono"
			android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>
    	
        <EditText 
            android:id="@+id/txtEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@id/txtTelefono"
            android:layout_alignLeft="@id/txtTelefono"/>
        

	    <Button 
	        android:id="@+id/btnImagen"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:text="@string/btnFoto"
	    	android:layout_below="@id/lblEmail"
	    	android:layout_alignLeft="@id/lblEmail"
	    	android:layout_marginTop="20dp"/>
	    
	        <ImageView 
	    	android:id="@+id/imgArgazkia"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/btnImagen"
	    	android:layout_alignLeft="@id/btnImagen"
	    	android:layout_marginTop="20dp"/>     
	    	
	    
	    <Button 
	        android:id="@+id/btnGuardarJugador"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:text="@string/btnGuardar"
	    	android:layout_below="@id/imgArgazkia"
	    	android:layout_alignLeft="@id/imgArgazkia"
	    	android:layout_marginTop="20dp"/> 


	</RelativeLayout>
	
</ScrollView>
