<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       <Button 
        	android:id="@+id/btnPruebasEntreno"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:text="@string/btnPruebas"
        
        />
        
        
        
        <Button 
        	android:id="@+id/btnJugadoresEntreno"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:text="@string/btnJugadores"
        
        />
        

        <Button 
        	android:id="@+id/btnEntreno"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:text="@string/btnEntreno"
        
        />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
        	android:id="@+id/btnGuardarEntreno"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:text="@string/btnGuardar"
        
        />
        
                  
        <EditText 
            android:id="@+id/txtNombreEntreno"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:hint="@string/nombreEntrenamiento"
            />
        
        
         </LinearLayout>
    
    
    <TextView 
        android:id="@+id/lblEntreno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medirPruebas"
        android:textStyle="bold"
        />
    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      
        
               <com.example.futbola.ExpandableHeightGridView 
	        android:id="@+id/gridCabecerasEntreno"
	       	android:layout_height="wrap_content"
	       	android:layout_width="wrap_content"
	       	android:columnWidth="150dp"
	       	android:stretchMode="none"
	       	android:visibility="invisible"
	        />
        
        
     <com.example.futbola.ExpandableHeightListView 
       	android:id="@+id/lstTabla"
       	android:layout_height="wrap_content"
       	android:layout_width="150dp"
       	android:layout_below="@id/gridCabecerasEntreno"
       	android:visibility="gone"

        
   	 />
        
             
     <com.example.futbola.ExpandableHeightListView 
       	android:id="@+id/lstEntreno"
       	android:layout_height="wrap_content"
       	android:layout_width="300dp"
       	android:layout_below="@id/gridCabecerasEntreno"
        
   	 />

    
    	<com.example.futbola.ExpandableHeightGridView 
	        android:id="@+id/gridEntreno"
	       	android:layout_height="wrap_content"
	       	android:layout_width="wrap_content"
	       	android:columnWidth="150dp"
	       	android:stretchMode="none"
	       	android:layout_below="@id/gridCabecerasEntreno"
	       	android:layout_toRightOf="@id/lstTabla"
	       	android:visibility="gone"
	        />
        
        

       
       
       
       
    </RelativeLayout>
    
    
    
</LinearLayout>

  </ScrollView>
