<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
<!--    <LinearLayout  -->
<!--       android:layout_width="wrap_content" -->
<!--       android:layout_height="wrap_content" -->
<!--       android:orientation="horizontal">      -->
    
    
    <TextView 
        android:id="@+id/lblDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
    
    <EditText 
        android:id="@+id/txtDia"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@id/lblDia"
        android:inputType="number"></EditText>

    
     <TextView 
        android:id="@+id/lblMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mes"
        android:layout_below="@id/lblDia"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
     
      <EditText 
        android:id="@+id/txtMes"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblDia"
        android:layout_alignLeft="@id/txtDia"
        android:inputType="number"></EditText>
   
    
        
     <TextView 
        android:id="@+id/lblAnyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anyo"
        android:layout_below="@id/lblMes"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
     
     <EditText 
        android:id="@+id/txtAnyo"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblMes"
        android:layout_alignLeft="@id/txtMes"
        android:inputType="number"></EditText>
        

  <Button 
      android:id="@+id/btnFecha"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/lblAnyo"
      android:text="@string/btnAceptar"
      android:layout_marginTop="50dp"/>
      
      

</RelativeLayout>
