<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    
        <Button 
        android:id="@+id/btnAnadirJugadores"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
		android:text="@string/btnAnadirJugadores"
        />
    
     <Button
        android:id="@+id/btnEditarJugadores"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
      	android:text="@string/btnEditarJugadores"
        />
    
     
    <Button 
        android:id="@+id/btnEliminarJugadores"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
      	android:text="@string/btnEliminarJugadores"
        />
         
     <Button 
        android:id="@+id/btnVerJugadores"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
      	android:text="@string/btnVerJugadores"
        />
    
    
</LinearLayout>



<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent" -->
<!--     android:orientation="vertical" -->
<!--     android:layout_gravity="center" -->
<!--     android:gravity="center"> -->
        
<!--     <Button -->
<!--         android:id="@+id/btnEditarJugadores" -->
<!--         android:layout_width="300dp" -->
<!--         android:layout_height="wrap_content" -->
<!--       	android:text="@string/btnEditarJugadores" -->
<!-- 		android:layout_centerInParent="true" -->
<!-- 		android:layout_marginTop="30dp" -->
<!-- 		android:layout_marginBottom="30dp" -->
<!--         /> -->
    
<!--     <Button  -->
<!--         android:id="@+id/btnAnadirJugadores" -->
<!--         android:layout_width="300dp" -->
<!--         android:layout_height="wrap_content" -->
<!-- 		android:text="@string/btnAnadirJugadores" -->
<!-- 		android:layout_above="@id/btnEditarJugadores" -->
<!-- 		android:layout_centerInParent="true"	 -->
<!--         /> -->
    
<!--     <Button  -->
<!--         android:id="@+id/btnEliminarJugadores" -->
<!--         android:layout_width="300dp" -->
<!--         android:layout_height="wrap_content" -->
<!--       	android:text="@string/btnEliminarJugadores" -->
<!-- 		android:layout_below="@id/btnEditarJugadores" -->
<!-- 		android:layout_centerInParent="true" -->
<!--         /> -->

<!-- </RelativeLayout> -->
